@@ -29,12 +29,6 @@
 
 using namespace arangodb;
 
-RocksDBSingleOperationReadOnlyMethods::RocksDBSingleOperationReadOnlyMethods(RocksDBTransactionState* state,
-                                                                             rocksdb::TransactionDB* db)
-    : RocksDBReadOnlyBaseMethods(state), _db(db) {
-  TRI_ASSERT(_db != nullptr);
-}
-
 Result RocksDBSingleOperationReadOnlyMethods::beginTransaction() {
   return {};
 }
@@ -52,19 +46,12 @@ rocksdb::ReadOptions RocksDBSingleOperationReadOnlyMethods::iteratorReadOptions(
   THROW_ARANGO_EXCEPTION_MESSAGE(TRI_ERROR_INTERNAL, "should not call iteratorReadOptions for single operation methods");
 }
 
-rocksdb::SequenceNumber RocksDBSingleOperationReadOnlyMethods::GetSequenceNumber() const noexcept {
-  return _db->GetLatestSequenceNumber();
-}
-
 rocksdb::Status RocksDBSingleOperationReadOnlyMethods::Get(rocksdb::ColumnFamilyHandle* cf,
                                                            rocksdb::Slice const& key,
                                                            rocksdb::PinnableSlice* val,
                                                            ReadOwnWrites) {
   TRI_ASSERT(cf != nullptr);
-  rocksdb::ReadOptions ro;
-  ro.prefix_same_as_start = true;  // should always be true
-  ro.fill_cache = _state->options().fillBlockCache;
-  return _db->Get(ro, cf, key, val);
+  return _db->Get(_readOptions, cf, key, val);
 }
 
 std::unique_ptr<rocksdb::Iterator> RocksDBSingleOperationReadOnlyMethods::NewIterator(
