@@ -1,6 +1,12 @@
 v3.9.0 (XXXX-XX-XX)
 -------------------
 
+* Fix potential read inconsistency for single document operations.
+  When reading a single document that is concurrently being updated or replaced,
+  the read operation could erroneously return a "document not found" error
+  although the document actually existed. This only happened for single document
+  operations, i.e., no transactions or AQL queries.
+
 * APM-256: make arangoexport escape potential formulae in CSV exports.
   This addresses a potential security issue when exporting specially crafted
   documents to CSV, opening the CSV file in MS Excel or OpenOffice and then
